@@ -10,7 +10,8 @@ plugins {
 
     id 'me.champeau.jmh' version '0.7.2'
 
-    id 'org.javamodularity.moduleplugin' version '1.8.15'
+    // This is https://github.com/java9-modularity/gradle-modules-plugin/pull/282
+    id 'com.github.koppor.gradle-modules-plugin' version 'jitpack-SNAPSHOT'
 
     id 'org.openjfx.javafxplugin' version '0.1.0'
 
@@ -28,7 +29,7 @@ plugins {
 
     id 'idea'
 
-    id 'org.openrewrite.rewrite' version '6.16.0'
+    id 'org.openrewrite.rewrite' version '6.16.2'
 }
 
 // Enable following for debugging
@@ -79,6 +80,8 @@ application {
         '--add-opens=javafx.graphics/javafx.scene=org.jabref.merged.module',
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref.merged.module',
         '--add-opens=javafx.controls/com.sun.javafx.scene.control=org.jabref.merged.module',
+        // fix for https://github.com/JabRef/jabref/issues/11426
+        '--add-opens=javafx.controls/javafx.scene.control.skin=org.jabref.merged.module',
 
         // Fix for https://github.com/JabRef/jabref/issues/11225 on linux
         '--add-opens=javafx.controls/javafx.scene.control=org.jabref',
@@ -155,7 +158,7 @@ dependencies {
         exclude group: 'commons-logging'
     }
 
-    def luceneVersion = "9.11.0"
+    def luceneVersion = "9.11.1"
     implementation "org.apache.lucene:lucene-core:$luceneVersion"
     implementation "org.apache.lucene:lucene-queryparser:$luceneVersion"
     implementation "org.apache.lucene:lucene-queries:$luceneVersion"
@@ -222,7 +225,7 @@ dependencies {
         exclude group: 'org.openjfx'
     }
     implementation 'org.fxmisc.flowless:flowless:0.7.3'
-    implementation 'org.fxmisc.richtext:richtextfx:0.11.2'
+    implementation 'org.fxmisc.richtext:richtextfx:0.11.3'
     implementation (group: 'com.dlsc.gemsfx', name: 'gemsfx', version: '2.32.0') {
         exclude module: 'javax.inject' // Split package, use only jakarta.inject
         exclude module: 'commons-lang3'
@@ -307,9 +310,9 @@ dependencies {
 
     implementation 'commons-io:commons-io:2.16.1'
 
-    testImplementation 'io.github.classgraph:classgraph:4.8.173'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'
+    testImplementation 'io.github.classgraph:classgraph:4.8.174'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.3'
 
     testImplementation 'org.mockito:mockito-core:5.12.0'
     testImplementation 'org.xmlunit:xmlunit-core:2.10.0'
@@ -325,7 +328,7 @@ dependencies {
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '3.0.2'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'
 
-    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:2.12.0"))
+    rewrite(platform("org.openrewrite.recipe:rewrite-recipe-bom:2.13.2"))
     rewrite("org.openrewrite.recipe:rewrite-static-analysis")
     rewrite("org.openrewrite.recipe:rewrite-logging-frameworks")
     rewrite("org.openrewrite.recipe:rewrite-testing-frameworks")
@@ -494,6 +497,8 @@ run {
                 'javafx.controls/javafx.scene.control.skin' : 'org.controlsfx.controls',
                 'javafx.graphics/javafx.scene' : 'org.controlsfx.controls'
         ]
+
+        createCommandLineArgumentFile = true
     }
 
     if (project.hasProperty('component')){
